Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2829,7 +2829,7 @@
    "outputs": [],
    "source": [
     "def df_dy(list_of_terms):\n",
-    "    "
+    "    for term in list_of_t"
    ]
   },
   {
