Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2829,8 +2829,9 @@
    "outputs": [],
    "source": [
     "def df_dy(list_of_terms):\n",
+    "    \n",
     "    for term in list_of_terms:\n",
-    "        "
+    "        term_df_dy(term)"
    ]
   },
   {
