--- a/index.ipynb
+++ b/index.ipynb
@@ -2829,7 +2829,7 @@
    "outputs": [],
    "source": [
     "def df_dy(list_of_terms):\n",
-    "    \n",
+    "    ret_list = []\n",
     "    for term in list_of_terms:\n",
     "        term_df_dy(term)"
    ]
