Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2832,7 +2832,7 @@
     "    ret_list = []\n",
     "    for term in list_of_terms:\n",
     "        ret_list.append(term_df_dy(term))\n",
-    "        "
+    "    return ret_list    "
    ]
   },
   {
